@@ -64,7 +64,7 @@ master_doc = 'index'
 
 # General information about the project.
 project = u'qPython'
-copyright = u'2014-2015, DEVnet'
+copyright = u'2014-2016, DEVnet'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
