@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------------
+  qPython 1.2.0 [2016.01.*]
+------------------------------------------------------------------------------
+
+  - API redesign: enable custom serializers & deserializers
+
+------------------------------------------------------------------------------
   qPython 1.1.0 [2015.11.25]
 ------------------------------------------------------------------------------
 
